[package]
name = "outlook-exe"
version = "0.1.0"
authors = ["Ryan Avella"]
edition = "2018"
description = "Convenience wrappers for command-line invocation of Outlook."
documentation = "https://docs.rs/outlook-exe"
readme = "README.md"
homepage = "https://github.com/ryanavella/outlook-exe"
repository = "https://github.com/ryanavella/outlook-exe"
license = "Unlicense OR MIT"
keywords = ["microsoft", "outlook", "email", "windows", "message"]
categories = ["email", "command-line-utilities"]

[dependencies]
lazy_static = "1.4.0"
winreg = "0.7.0"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
